--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
     <script>
         // --- CONFIGURAÇÃO ---
-        const SUPABASE_URL = 'https://SUA_URL.supabase.co';
-        const SUPABASE_KEY = 'SUA_CHAVE_ANON';
+        const SUPABASE_URL = 'https://oalkcwquiowfiggdwjmi.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hbGtjd3F1aW93ZmlnZ2R3am1pIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIyMTk1MzAsImV4cCI6MjA4Nzc5NTUzMH0.zFGxJ5D3vW1jOdkAvV5S6offZlgQ8eB2l8l9pDas3HU';
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         let filtroCartao = null;
