--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
     <script>
         // COLOQUE SEUS DADOS DO NOVO PROJETO AQUI
-        const SUPABASE_URL = 'https://oalkcwquiowfiggdwjmi.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hbGtjd3F1aW93ZmlnZ2R3am1pIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIyMTk1MzAsImV4cCI6MjA4Nzc5NTUzMH0.zFGxJ5D3vW1jOdkAvV5S6offZlgQ8eB2l8l9pDas3HU';
+        const SUPABASE_URL = 'https://rwowvvpobywtokcqfxve.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJ3b3d2dnBvYnl3dG9rY3FmeHZlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIyNDY3MTgsImV4cCI6MjA4NzgyMjcxOH0.AJVmEKeUk22L4eT_FMLls0-xAJhMrAITOazM_1XmUaM';
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         let filtroCartao = null;
