--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .custom-scroll::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
         .floating-controls { position: fixed; bottom: 2rem; left: 50%; transform: translateX(-50%); display: flex; align-items: flex-end; gap: 1.2rem; z-index: 50; }
         .modal-overlay { display: none; position: fixed; inset: 0; background-color: rgba(15, 23, 42, 0.7); backdrop-filter: blur(8px); z-index: 100; align-items: center; justify-content: center; padding: 1.5rem; }
-        .modal-content { background-color: white; width: 100%; max-width: 500px; border-radius: 2.5rem; box-shadow: 0 25px 50px -12px rgba(0,0,0,0.5); max-height: 85vh; overflow-y: auto; position: relative; }
+        .modal-content { background-color: white; width: 100%; max-width: 450px; border-radius: 2.5rem; box-shadow: 0 25px 50px -12px rgba(0,0,0,0.5); max-height: 85vh; overflow-y: auto; position: relative; }
         .btn-close-modal { position: absolute; top: 1.5rem; right: 1.5rem; color: #cbd5e1; cursor: pointer; font-size: 1.2rem; }
         .date-select { appearance: none; background: white; border: 1px solid #e2e8f0; padding: 0.6rem 2rem; border-radius: 9999px; font-weight: 900; font-size: 0.65rem; text-transform: uppercase; cursor: pointer; }
     </style>
@@ -81,14 +81,6 @@
         </button>
     </div>
 
-    <div id="modal-anual" class="modal-overlay">
-        <div class="modal-content p-10 italic">
-            <i class="fas fa-times btn-close-modal" onclick="fecharModais()"></i>
-            <h3 class="font-black text-slate-800 text-xl uppercase mb-6 text-center">Resumo Anual</h3>
-            <div id="corpo-anual" class="space-y-3"></div>
-        </div>
-    </div>
-
     <div id="modal-menu-config" class="modal-overlay">
         <div class="modal-content p-8">
             <i class="fas fa-times btn-close-modal" onclick="fecharModais()"></i>
@@ -132,6 +124,14 @@
         </div>
     </div>
 
+    <div id="modal-anual" class="modal-overlay">
+        <div class="modal-content p-10 italic">
+            <i class="fas fa-times btn-close-modal" onclick="fecharModais()"></i>
+            <h3 class="font-black text-slate-800 text-xl uppercase mb-6 text-center">Resumo Anual</h3>
+            <div id="corpo-anual" class="space-y-3"></div>
+        </div>
+    </div>
+
     <div id="modal-lancar" class="modal-overlay">
         <div class="modal-content p-8">
             <i class="fas fa-times btn-close-modal" onclick="fecharModais()"></i>
@@ -153,6 +153,15 @@
         </div>
     </div>
 
+    <div id="modal-excluir-parcelado" class="modal-overlay">
+        <div class="modal-content p-8">
+            <i class="fas fa-times btn-close-modal" onclick="fecharModais()"></i>
+            <h3 class="font-black text-slate-800 text-lg uppercase mb-6 text-center italic">Excluir Parcelamento</h3>
+            <p class="text-[10px] font-bold text-slate-400 uppercase text-center mb-6">Como deseja excluir este gasto?</p>
+            <div class="space-y-3" id="opcoes-exclusao-container"></div>
+        </div>
+    </div>
+
     <script>
         const SUPABASE_URL = 'https://rwowvvpobywtokcqfxve.supabase.co';
         const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJ3b3d2dnBvYnl3dG9rY3FmeHZlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIyNDY3MTgsImV4cCI6MjA4NzgyMjcxOH0.AJVmEKeUk22L4eT_FMLls0-xAJhMrAITOazM_1XmUaM';
@@ -160,6 +169,7 @@
 
         let filtroCartao = null;
         let filtroParcelado = false;
+        let itemParaExcluir = null;
         const mesesNomes = ["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
 
         window.onload = () => { setupDatas(); atualizarTudo(); };
@@ -194,15 +204,59 @@
             } catch (e) { console.error("Erro ao atualizar:", e); }
         }
 
+        // LÓGICA DE EXCLUSÃO INTELIGENTE
+        async function excluir(tab, id) {
+            if (tab !== 'despesas') {
+                if (confirm("Confirmar exclusão?")) {
+                    await _supabase.from(tab).delete().eq('id', id);
+                    await atualizarTudo();
+                }
+                return;
+            }
+
+            const { data: despesa } = await _supabase.from('despesas').select('*').eq('id', id).single();
+
+            if (despesa && despesa.is_parcelado) {
+                itemParaExcluir = despesa;
+                const container = document.getElementById('opcoes-exclusao-container');
+                container.innerHTML = `
+                    <button onclick="executarExclusao('unica')" class="w-full p-4 bg-slate-100 hover:bg-slate-200 rounded-xl font-black text-[10px] uppercase text-slate-600">Apenas esta parcela</button>
+                    <button onclick="executarExclusao('proximas')" class="w-full p-4 bg-orange-50 hover:bg-orange-100 rounded-xl font-black text-[10px] uppercase text-orange-600">Esta e as próximas</button>
+                    <button onclick="executarExclusao('todas')" class="w-full p-4 bg-red-50 hover:bg-red-100 rounded-xl font-black text-[10px] uppercase text-red-600">Todas as parcelas</button>
+                `;
+                abrirModal('modal-excluir-parcelado');
+            } else {
+                if (confirm("Excluir esta despesa?")) {
+                    await _supabase.from('despesas').delete().eq('id', id);
+                    await atualizarTudo();
+                }
+            }
+        }
+
+        async function executarExclusao(tipo) {
+            if (!itemParaExcluir) return;
+            const { descricao, data, cartao_id } = itemParaExcluir;
+            const baseDesc = descricao.split(' (')[0]; 
+
+            let q = _supabase.from('despesas').delete();
+            if (tipo === 'unica') q = q.eq('id', itemParaExcluir.id);
+            else if (tipo === 'proximas') q = q.ilike('descricao', `${baseDesc}%`).eq('cartao_id', cartao_id).gte('data', data);
+            else if (tipo === 'todas') q = q.ilike('descricao', `${baseDesc}%`).eq('cartao_id', cartao_id);
+
+            await q;
+            itemParaExcluir = null;
+            fecharModais();
+            await atualizarTudo();
+        }
+
         async function salvarItem(tab, inputId) {
             const el = document.getElementById(inputId);
             const nome = el.value.trim();
             if(!nome) return;
             try {
-                const { error } = await _supabase.from(tab).insert([{ nome }]);
-                if(error) throw error;
+                await _supabase.from(tab).insert([{ nome }]);
                 el.value = ''; await atualizarTudo();
-            } catch (e) { alert("Erro de conexão: " + e.message); }
+            } catch (e) { alert("Erro de conexão."); }
         }
 
         async function gerarResumoAnual() {
@@ -210,10 +264,10 @@
             const corpo = document.getElementById('corpo-anual');
             corpo.innerHTML = '<p class="text-center font-bold text-slate-300 p-10 uppercase text-[10px]">Calculando...</p>';
             abrirModal('modal-anual');
-            const { data: despesas } = await _supabase.from('despesas').select('*').gte('data', `${ano}-01-01`).lte('data', `${ano}-12-31`);
+            const { data } = await _supabase.from('despesas').select('*').gte('data', `${ano}-01-01`).lte('data', `${ano}-12-31`);
             let html = '';
             mesesNomes.forEach((nome, i) => {
-                const total = despesas?.filter(d => new Date(d.data).getMonth() === i).reduce((a, b) => a + Number(b.valor), 0) || 0;
+                const total = data?.filter(d => new Date(d.data).getMonth() === i).reduce((a, b) => a + Number(b.valor), 0) || 0;
                 html += `<div class="flex justify-between p-4 bg-slate-50 rounded-2xl"><span class="font-black text-[10px] uppercase text-slate-400">${nome}</span><span class="font-black text-slate-800">R$ ${total.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</span></div>`;
             });
             corpo.innerHTML = html;
@@ -225,7 +279,7 @@
         }
 
         function renderSidebar(lista) {
-            document.getElementById('sidebar-cartoes').innerHTML = lista?.map(c => `<button onclick="setFiltroCartao('${c.id}')" class="w-full text-left p-4 rounded-2xl font-black text-[10px] uppercase ${filtroCartao === c.id ? 'bg-blue-600 text-white' : 'bg-slate-50 text-slate-500'} transition-all">${c.nome}</button>`).join('') || '';
+            document.getElementById('sidebar-cartoes').innerHTML = lista?.map(c => `<button onclick="setFiltroCartao('${c.id}')" class="w-full text-left p-4 rounded-2xl font-black text-[10px] uppercase ${filtroCartao === c.id ? 'bg-blue-600 text-white' : 'bg-slate-50 text-slate-500'}">${c.nome}</button>`).join('') || '';
         }
 
         function renderTabela(dados) {
@@ -264,8 +318,7 @@
             const mesBase = parseInt(document.getElementById('sel-mes').value);
             const anoBase = parseInt(document.getElementById('sel-ano').value);
             const insercoes = [];
-            const loops = isParc ? qtd : 1;
-            for(let i=0; i < (isFixa ? 12 : loops); i++) {
+            for(let i=0; i < (isFixa ? 12 : (isParc ? qtd : 1)); i++) {
                 let dVenc = new Date(anoBase, mesBase + i, 10);
                 insercoes.push({
                     descricao: isParc ? `${desc} (${i+1}/${qtd})` : desc,
@@ -273,17 +326,8 @@
                     is_fixa: isFixa, is_parcelado: isParc, parcelas: qtd, data: dVenc.toISOString()
                 });
             }
-            try {
-                await _supabase.from('despesas').insert(insercoes);
-                fecharModais(); await atualizarTudo();
-            } catch (e) { alert("Erro ao lançar: " + e.message); }
-        }
-
-        async function excluir(tab, id) {
-            if(confirm("Confirmar exclusão?")) {
-                await _supabase.from(tab).delete().eq('id', id);
-                await atualizarTudo();
-            }
+            await _supabase.from('despesas').insert(insercoes);
+            fecharModais(); await atualizarTudo();
         }
 
         function renderSelects(cartoes, cats) {
