--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
             }
         }
 
+        async function salvarSalario() {
+            const m = document.getElementById('f-sal-mes').value, v = document.getElementById('f-sal-valor').value, a = document.getElementById('sel-ano').value;
+            if(!v) return; 
+            const key = `${a}-${m}`;
+            await _supabase.from('salarios').upsert({ mes_ano: key, valor: parseFloat(v) }, { onConflict: 'mes_ano' });
+            alert("Salário atualizado!");
+            fecharModais(); 
+            // Se o modal de análise estiver aberto, atualizamos ele.
+            if(document.getElementById('modal-analise').style.display === 'flex') gerarAnaliseGastos();
+        }
+
         async function gerarResumoAnual() {
             const ano = document.getElementById('sel-ano').value, corpo = document.getElementById('corpo-anual');
             corpo.innerHTML = '<p class="text-center font-black text-slate-300 p-10 uppercase text-[10px]">Carregando...</p>';
@@ -158,7 +169,7 @@
             const { data } = await _supabase.from('despesas').select('*').gte('data', `${ano}-01-01`).lte('data', `${ano}-12-31`);
             let h = `<div class="flex justify-between px-4 mb-3 text-[8px] font-black text-slate-400 uppercase tracking-widest border-b pb-2"><div class="w-1/4">Mês</div><div class="w-1/4 text-center">Fixas</div><div class="w-1/4 text-center">Normais</div><div class="w-1/4 text-right">Total</div></div>`;
             mesesNomes.forEach((n, i) => {
-                const dM = data?.filter(d => new Date(d.data).getMonth() === i) || [];
+                const dM = data?.filter(d => new Date(d.data).getUTCMonth() === i) || [];
                 const tF = dM.filter(d => d.is_fixa).reduce((a, b) => a + Number(b.valor), 0);
                 const tN = dM.filter(d => !d.is_fixa).reduce((a, b) => a + Number(b.valor), 0);
                 h += `<div class="flex justify-between items-center p-4 bg-slate-50 rounded-2xl mb-2"><span class="w-1/4 font-black text-[9px] uppercase text-slate-500">${n}</span><span class="w-1/4 text-center font-bold text-emerald-600 text-[9px]">R$ ${tF.toLocaleString('pt-BR')}</span><span class="w-1/4 text-center font-bold text-orange-500 text-[9px]">R$ ${tN.toLocaleString('pt-BR')}</span><span class="w-1/4 text-right font-black text-slate-800 text-[10px]">R$ ${(tF+tN).toLocaleString('pt-BR')}</span></div>`;
@@ -174,20 +185,16 @@
             const { data: salarios } = await _supabase.from('salarios').select('*');
             let h = '';
             mesesNomes.forEach((n, i) => {
-                const tG = gastos?.filter(d => new Date(d.data).getMonth() === i).reduce((a, b) => a + Number(b.valor), 0) || 0;
-                const sal = salarios?.find(s => s.mes_ano === `${ano}-${i}`)?.valor || 0;
-                const sobra = sal - tG;
-                h += `<div class="p-4 bg-slate-50 rounded-2xl border border-slate-100 flex justify-between items-center"><div><p class="font-black text-[10px] uppercase text-slate-800">${n}</p><p class="text-[8px] font-black text-slate-400">SALÁRIO: R$ ${sal.toLocaleString('pt-BR')}</p></div><div class="text-right"><p class="text-[8px] font-black text-slate-400 uppercase">GASTOS: R$ ${tG.toLocaleString('pt-BR')}</p><p class="text-[10px] font-black ${sobra < 0 ? 'text-red-600' : 'text-blue-700'}">PODE GASTAR: R$ ${sobra.toLocaleString('pt-BR')}</p></div></div>`;
+                const tG = gastos?.filter(d => new Date(d.data).getUTCMonth() === i).reduce((a, b) => a + Number(b.valor), 0) || 0;
+                const salData = salarios?.find(s => s.mes_ano === `${ano}-${i}`);
+                const valorSal = salData ? Number(salData.valor) : 0;
+                const sobra = valorSal - tG;
+                h += `<div class="p-4 bg-slate-50 rounded-2xl border border-slate-100 flex justify-between items-center"><div><p class="font-black text-[10px] uppercase text-slate-800">${n}</p><p class="text-[8px] font-black text-slate-400">SALÁRIO: R$ ${valorSal.toLocaleString('pt-BR')}</p></div><div class="text-right"><p class="text-[8px] font-black text-slate-400 uppercase">GASTOS: R$ ${tG.toLocaleString('pt-BR')}</p><p class="text-[10px] font-black ${sobra < 0 ? 'text-red-600' : 'text-blue-700'}">SOBRA: R$ ${sobra.toLocaleString('pt-BR')}</p></div></div>`;
             });
             corpo.innerHTML = h;
         }
 
-        async function salvarSalario() {
-            const m = document.getElementById('f-sal-mes').value, v = document.getElementById('f-sal-valor').value, a = document.getElementById('sel-ano').value;
-            if(!v) return; await _supabase.from('salarios').upsert({ mes_ano: `${a}-${m}`, valor: parseFloat(v) }, { onConflict: 'mes_ano' });
-            fecharModais();
-        }
-
+        // Funções auxiliares (Iguais)
         function toggleDrawer(open) { document.getElementById('body-root').classList.toggle('drawer-active', open); }
         function abrirModal(id) { document.getElementById(id).style.display = 'flex'; }
         function fecharModais() { document.querySelectorAll('.modal-overlay').forEach(m => m.style.display = 'none'); }
@@ -216,7 +223,7 @@
             if(!d || !v || !dt) return;
             const c = document.getElementById('f-cartao').value, isF = document.getElementById('f-fixa').checked, isP = document.getElementById('f-parc').checked, q = parseInt(document.getElementById('f-qtd-parc').value) || 1;
             const ins = []; for(let i=0; i<(isP?q:1); i++) {
-                let dV = new Date(dt + 'T12:00:00'); dV.setMonth(dV.getMonth() + i);
+                let dV = new Date(dt + 'T12:00:00'); dV.setMonth(dV.getUTCMonth() + i);
                 ins.push({ descricao: isP?`${d} (${i+1}/${q})`:d, valor: isP?v/q:v, cartao_id: c||null, is_fixa: isF, is_parcelado: isP, data: dV.toISOString() });
             }
             await _supabase.from('despesas').insert(ins); fecharModais(); atualizarTudo();
